Refactor to break out camera control into it's own piece

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -108,7 +108,7 @@ GridLayout:
             text: "Select Encoder Point"
             disabled: True
 
-<ColorControl>:
+<ColorControls>:
     name: 'color_control_ui'
     GridLayout:
         cols: 1
