Made many pieces better

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -107,6 +107,7 @@ GridLayout:
             height: app.button_height
             id: find_encoder
             text: "Select Encoder Point"
+            on_release: root.select_encoder()
         Button:
             size_hint_y: None
             height: app.button_height
