Added encoder graph and made encoder wheel user cconfigurable

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -108,6 +108,28 @@ GridLayout:
             id: find_encoder
             text: "Select Encoder Point"
             on_release: root.select_encoder()
+        Label:
+            size_hint_y: None
+            height: app.label_height
+            text: "Encoder Threshold"
+        Slider:
+            size_hint_y: None
+            min: 0
+            max: 255 * 6
+            value: 150
+            height: app.button_height
+            on_value: root.encoder_threshold(self.value)
+        Label:
+            size_hint_y: None
+            height: app.label_height
+            text: "Encoder Null Zone"
+        Slider:
+            size_hint_y: None
+            min: 1
+            max: 256
+            value: 50
+            height: app.button_height
+            on_value: root.encoder_null_zone(self.value)
         Button:
             size_hint_y: None
             height: app.button_height
