Breaking out pieces in to seperate sections

--- a/src/ui/posisition.kv
+++ b/src/ui/posisition.kv
@@ -8,7 +8,7 @@
             height: app.button_height
             id: find_centre
             text: "Select Center"
-            on_release: root.select_centre()
+            on_release: root.select_center()
         Button:
             size_hint_y: None
             height: app.button_height
