--- a/src/ui/posisition.kv
+++ b/src/ui/posisition.kv
@@ -43,3 +43,10 @@
             id: find_roi
             text: "Select Region of Interest"
             on_release: root.select_roi()
+        Label:
+        Button:
+            size_hint_y: None
+            height: app.button_height
+            id: save
+            text: "Save"
+            on_release: root.save()
