Added details for working with saving encoder point

--- a/src/ui/posisition.kv
+++ b/src/ui/posisition.kv
@@ -49,4 +49,4 @@
             height: app.button_height
             id: save
             text: "Save"
-            on_release: root.save()
+            on_release: root.save_settings()
