Ground work for kivy opencv cross talk

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -44,3 +44,5 @@ GridLayout:
             id: find_centre
             text: "Start Capture"
             on_release: root.start_capture()
+        ProgressBar:
+            max: 1.0
