Starting refactor -inprogress-

--- a/src/ui/capture_control.kv
+++ b/src/ui/capture_control.kv
@@ -8,8 +8,8 @@
             size_hint_y: None
             height: app.button_height
             id: find_centre
-            text: "Start Capture"
-            on_release: root.start_capture()
+            text: "Start Points Capture"
+            on_release: root.start_points_capture()
         ProgressBar:
             id: progress
             size_hint_y: None
