Passing image from underlying feed

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -1,35 +1,43 @@
 <MyScreenManager>:
 
-GridLayout:
-    cols: 1
-    BoxLayout:
-        size_hint_y: None
-        height: app.button_height
+BoxLayout:
+    GridLayout:
+        size_hint_x: None
+        width: '350dp'
+        cols: 1
+        BoxLayout:
+            size_hint_y: None
+            height: app.button_height
+            Button:
+                size_hint_y: None
+                height: app.button_height
+                text: "CAM"
+                on_release: manager.current = 'camera_control_ui'
+#            Button:
+#                size_hint_y: None
+#                height: app.button_height
+#                text: "POS"
+#                on_release: manager.current = 'posisition_control_ui'
+#            Button:
+#                size_hint_y: None
+#                height: app.button_height
+#                text: "COL"
+#                on_release: manager.current = 'color_control_ui'
+#            Button:
+#                size_hint_y: None
+#                height: app.button_height
+#                text: "GET"
+#                on_release: manager.current = 'capture_control_ui'
+        MyScreenManager:
+            id: manager
         Button:
             size_hint_y: None
             height: app.button_height
-            text: "CAM"
-            on_release: manager.current = 'camera_control_ui'
-        Button:
-            size_hint_y: None
-            height: app.button_height
-            text: "POS"
-            on_release: manager.current = 'posisition_control_ui'
-        Button:
-            size_hint_y: None
-            height: app.button_height
-            text: "COL"
-            on_release: manager.current = 'color_control_ui'
-        Button:
-            size_hint_y: None
-            height: app.button_height
-            text: "GET"
-            on_release: manager.current = 'capture_control_ui'
-    MyScreenManager:
-        id: manager
-    Button:
-        size_hint_y: None
-        height: app.button_height
-        text: "Quit"
-        on_release: app.shutdown()
+            text: "Quit"
+            on_release: app.shutdown()
+    ImageDisplay:
+        scanner: app.scanner
+
+        
+
 
