--- a/src/ui/camera.kv
+++ b/src/ui/camera.kv
@@ -15,58 +15,25 @@
         height: app.button_height
         min: root.min_value
         max: root.max_value
-        step: root.step
+        step: 0.01
         value: root.value
         on_value: root.value = self.value
 
 <CameraControls>:
-    focus: focus
-    brightness: brightness
-    contrast: contrast
-    white_balance: white_balance
-    sharpness: sharpness
+    name: 'camera_control_ui'
+    camera_control: camera_control
     GridLayout:
         cols: 1
         Label:
             text: "Camera Control"
             size_hint_y: None
             height: app.button_height
-        CameraControl:
-            id: focus
-            text: "Focus"
-            min_value: 0
-            max_value: 255
-        CameraControl:
-            id: brightness
-            text: "Brightness"
-            min_value: 0
-            max_value: 255
-        CameraControl:
-            id: contrast
-            text: "Contrast"
-            min_value: 0
-            max_value: 255
-        CameraControl:
-            id: white_balance
-            text: "White Bal"
-            min_value: 0
-            max_value: 20000
-            step: 100
-        CameraControl:
-            id: sharpness
-            text: "Sharpness"
-            min_value: 0
-            max_value: 255
+        GridLayout:
+            id: camera_control
+            cols: 1
         BoxLayout:
         Button:
             size_hint_y: None
             height: app.button_height
             text: 'Save'
             on_release: root.save()
-
-
-<CameraControlWrapper>:
-    name: 'camera_control_ui'
-    camera_controls: camera_controls
-    CameraControls:
-        id: camera_controls
