Now encoder piont is selectable

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -15,11 +15,11 @@
                 height: app.button_height
                 text: "CAM"
                 on_release: root.manager.current = 'camera_control_ui'
-#            Button:
-#                size_hint_y: None
-#                height: app.button_height
-#                text: "POS"
-#                on_release: root.manager.current = 'posisition_control_ui'
+            Button:
+                size_hint_y: None
+                height: app.button_height
+                text: "POS"
+                on_release: root.manager.current = 'posisition_control_ui'
 #            Button:
 #                size_hint_y: None
 #                height: app.button_height
