--- a/src/ui/posisition.kv
+++ b/src/ui/posisition.kv
@@ -1,6 +1,6 @@
 <PositionControl>:
     name: 'posisition_control_ui'
-    capture: app.capture
+    #video_pos: app.video_pos
     encoder_threshold_widget: encoder_threshold_widget
     encoder_null_zone_widget: encoder_null_zone_widget
     GridLayout:
