Added ability to show the roi and select it

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -38,6 +38,7 @@
             text: "Quit"
             on_release: app.shutdown()
     ImageDisplay:
+        id: video
         scanner: app.scanner
 
         
