--- a/src/ui/video.kv
+++ b/src/ui/video.kv
@@ -1,5 +1,6 @@
 <ImageDisplay>:
-    canvas:
+
+    canvas.before:
         Rectangle:
             pos: self.tex_pos
             texture: self.image
