Added image capture to ui

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -25,11 +25,11 @@
 #                height: app.button_height
 #                text: "COL"
 #                on_release: root.manager.current = 'color_control_ui'
-#            Button:
-#                size_hint_y: None
-#                height: app.button_height
-#                text: "GET"
-#                on_release: root.manager.current = 'capture_control_ui'
+            Button:
+                size_hint_y: None
+                height: app.button_height
+                text: "GET"
+                on_release: root.manager.current = 'capture_control_ui'
         BoxLayout:
             id: screen_manager
         Button:
