Added toggleable graphic elements

--- a/src/ui/video.kv
+++ b/src/ui/video.kv
@@ -3,5 +3,5 @@
     canvas.before:
         Rectangle:
             pos: self.tex_pos
-            texture: self.image
+            texture: self.texture
             size: self.tex_size
