--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -3,6 +3,7 @@
 
 <ScannerGUI>:
     screen_manager: screen_manager
+    video: video
     GridLayout:
         size_hint_x: None
         width: '350dp'
@@ -32,11 +33,44 @@
                 on_release: root.manager.current = 'capture_control_ui'
         BoxLayout:
             id: screen_manager
-        Button:
+        BoxLayout:
             size_hint_y: None
             height: app.button_height
-            text: "Quit"
-            on_release: app.shutdown()
+            ToggleButton:
+                size_hint_y: None
+                height: app.button_height
+                text: "E"
+                state: 'down'
+                on_release: video.show_encoder = True if self.state == 'down' else False
+            ToggleButton:
+                size_hint_y: None
+                height: app.button_height
+                text: "H"
+                state: 'down'
+                on_release: video.show_encoder_history = True if self.state == 'down' else False
+            ToggleButton:
+                size_hint_y: None
+                height: app.button_height
+                text: "R"
+                state: 'down'
+                on_release: video.show_roi = True if self.state == 'down' else False
+            ToggleButton:
+                size_hint_y: None
+                height: app.button_height
+                text: "M"
+                state: 'down'
+                on_release: video.show_mask = True if self.state == 'down' else False
+            ToggleButton:
+                size_hint_y: None
+                height: app.button_height
+                text: "C"
+                state: 'down'
+                on_release: video.show_center = True if self.state == 'down' else False
+#        Button:
+#            size_hint_y: None
+#            height: app.button_height
+#            text: "Quit"
+#            on_release: app.shutdown()
     ImageDisplay:
         id: video
         scanner: app.scanner
