Fixed up some kivy references

--- a/src/ui/video.kv
+++ b/src/ui/video.kv
@@ -2,6 +2,6 @@
 
     canvas.before:
         Rectangle:
-            pos: self.tex_pos
+            pos: self.video_pos
             texture: self.texture
-            size: self.tex_size
+            size: self.video_size
