--- a/spikes/spikegl.kv
+++ b/spikes/spikegl.kv
@@ -1,7 +1,8 @@
 <Main>:
     GLWindow:
-    Label:
-        text: 'Hello World'
+    Button:
+        text: 'Exit'
+        on_release: exit()
 
 
 <GLWindow>:
