Added configuration call to scanner api and setup loading interstitial in peachy scanner ui

--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -71,5 +71,12 @@
         scanner: app.scanner
 
         
-
+<MasterGUI>:
+    orientation: 'vertical'
+    Label:
+    Image:
+        source: 'loading.gif'
+        anim_delay: 1 / 30.0
+    Label:
+        text: "Loading..."
 
