--- a/src/peachyscanner.kv
+++ b/src/peachyscanner.kv
@@ -31,6 +31,11 @@
                 height: app.button_height
                 text: "Points"
                 on_release: root.manager.current = 'points_capture_ui'
+            Button:
+                size_hint_y: None
+                height: app.button_height
+                text: "Config"
+                on_release: root.start_config()
         BoxLayout:
             id: screen_manager
         BoxLayout:
