--- a/src/ui/capture_control.kv
+++ b/src/ui/capture_control.kv
@@ -6,11 +6,42 @@
                 texture: root.texture
                 size: root.tex_size
 
+<SaveDialog>:
+    text_input: text_input
+    BoxLayout:
+        size: root.size
+        pos: root.pos
+        orientation: "vertical"
+        FileChooserListView:
+            id: filechooser
+            on_selection: text_input.text = self.selection and self.selection[0] or ''
+            path: '~'
+
+        TextInput:
+            id: text_input
+            size_hint_y: None
+            height: 30
+            multiline: False
+            text: "*.ply"
+
+        BoxLayout:
+            size_hint_y: None
+            height: 30
+            Button:
+                text: "Cancel"
+                on_release: root.cancel()
+
+            Button:
+                text: "Save"
+                on_release: root.save(filechooser.path, text_input.text)
+
+
 <PointsCapture>:
     image_box: image_box
     name: 'points_capture_ui'
     render: render
     go_button: go_button
+    save_button: save_button
     progress: progress
     GridLayout:
         cols: 1
@@ -32,11 +63,14 @@
         NumpyImage:
             id:image_box
             size_hint_y: 0.5
-        ToggleButton:
+        Button:
+            id: save_button
             size_hint_y: None
             height: app.button_height
-            text: "Mesh / Points"
-            on_release: render.mesh_mode = True if self.state == 'down' else False
+            text: "Save Points"
+            disabled: True
+            on_release: root.show_save()
+
 
 <ObjectRenderer>:
     canvas.before:
